add scss style and icons

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -4,18 +4,102 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="../../favicon.ico" />
     <link rel="stylesheet" href="../scss/styles.scss" />
     <title>Parcel Boilerplate</title>
   </head>
   <body>
-    <h1>Hello World</h1>
-    <p>
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore dolores
-      unde inventore laudantium eaque omnis repellat voluptatum eum odit, nulla
-      officia, suscipit incidunt blanditiis cupiditate, voluptate sit quidem
-      quod quo.
-    </p>
-    <a href="./about.html">about</a>
+    <header>
+      <div class="container grid">
+        <div class="grid__content">
+          <a
+            href="https://parceljs.org/"
+            target="_blank"
+            aria-label="parcel link"
+            rel="noreferrer"
+            role="link"
+          >
+            <img
+              class="logo"
+              src="../assets/images/parcel.svg"
+              title="Parcel"
+              alt="parcel logo"
+            />
+          </a>
+          <h1>🚀 Boilerplate Project</h1>
+          <ul class="logos">
+            <li>
+              <a
+                href="https://babeljs.io/"
+                target="_blank"
+                aria-label="babel link"
+                rel="noreferrer"
+                role="link"
+              >
+                <img
+                  class="logos__babel"
+                  src="../assets/images/babel.svg"
+                  title="Babel"
+                  alt="babel logo"
+                />
+              </a>
+            </li>
+            <li>
+              <a
+                href="https://postcss.org/"
+                target="_blank"
+                aria-label="postcss link"
+                rel="noreferrer"
+                role="link"
+              >
+                <img
+                  class="logos__postcss"
+                  src="../assets/images/postcss.svg"
+                  title="PostCSS"
+                  alt="postcss logo"
+                />
+              </a>
+            </li>
+            <li>
+              <a
+                href="https://sass-lang.com/"
+                target="_blank"
+                aria-label="sass link"
+                rel="noreferrer"
+                role="link"
+              >
+                <img
+                  class="logos__sass"
+                  src="../assets/images/sass.svg"
+                  title="SASS"
+                  alt="sass logo"
+                />
+              </a>
+            </li>
+          </ul>
+          <a
+            class="repository"
+            href="https://github.com/toniG-78/parcel-boilerplate-project"
+            target="_blank"
+            aria-label="repository"
+            rel="noreferrer"
+            role="link"
+            >Repository</a
+          >
+        </div>
+        <div class="box-img">
+          <img src="../assets/images/box2.png" alt="parcel box logo" />
+          <img src="../assets/images/box1.png" alt="parcel box logo" />
+        </div>
+      </div>
+    </header>
+
+    <footer>
+      <div class="container">
+        <p class="copyright">Copyright &copy; 2021</p>
+      </div>
+    </footer>
+
     <script src="../js/index.js"></script>
   </body>
 </html>
