--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <meta name="description" content="Put your description here." />
+    <title>Parcel Boilerplate</title>
     <link rel="icon" type="image/x-icon" href="../../favicon.ico" />
     <link rel="stylesheet" href="../scss/styles.scss" />
-    <title>Parcel Boilerplate</title>
   </head>
   <body>
     <header>
